# syslog-ng

./: configure.ac
lib/: Makefile.am  apphook.c  cfg-lexer.c  cfg-lexer.h  eventlog-tags.c  eventlog-tags.h  get-processor-count.c  get-processor-count.h  gprocess.c  gsocket.c  gsocket.h  hostname-unix.c  hostname-win32.c  hostname.c  hostname.h  logmpx.c  mainloop-io-worker.c  mainloop.c  misc.c  persist-state.c  reloc.c  thread-utils.h  timeutils.c  timeutils.h  value-pairs.c
lib/compat/: Makefile.am  clock_gettime.c  fsync.c  fsync.h  getpagesize.c  getpid.h  inet_ntop.c  inet_pton.c  iov.c  iov.h  iv_fd.c  iv_fd.h  localtime_r.c  mmap.c  mmap.h  nanosleep.c  string.h  strptime.c  syslog.h  time.h  win32.h
lib/control/: Makefile.am  control-server-win32.c  control-server.c
lib/debugger/: debugger.c  tracer.c  tracer.h
lib/transport/: transport-socket.c
libtest/: testutils.h
modules/affile/: logproto-file-writer.c
modules/dbparser/: Makefile.am  correllate-parser.c  correllate-parser.h  dbparser-grammar.ym  dbparser-parser.c  dbparser-plugin.c  patterndb.c  radix.c  radix.h
modules/dbparser/tests/: test_radix.c
modules/syslogformat/: syslog-format.c
modules/system-source/: system-source.c
modules/systemd-journal/: journal-reader.c
syslog-ng-ctl/: control-client-win32.c
tests/unit/: test_msgparse.c  test_persist_state.c
