compatincludedir		= ${pkgincludedir}/compat

compatinclude_HEADERS		= 	\
	lib/compat/compat.h		\
	lib/compat/getutent.h		\
	lib/compat/fsync.h		\
	lib/compat/getpid.h		\
	lib/compat/glib.h		\
	lib/compat/iov.h		\
	lib/compat/iv_fd.h		\
	lib/compat/lfs.h		\
	lib/compat/pio.h		\
	lib/compat/socket.h		\
	lib/compat/mmap.h		\
	lib/compat/string.h		\
	lib/compat/time.h		\
	lib/compat/win32.h

compat_sources			= 	\
	lib/compat/getutent.c		\
	lib/compat/clock_gettime.c	\
	lib/compat/inet_aton.c		\
	lib/compat/fsync.c		\
	lib/compat/getpagesize.c	\
	lib/compat/inet_aton.c		\
	lib/compat/inet_ntop.c		\
	lib/compat/inet_pton.c		\
	lib/compat/iov.c		\
	lib/compat/iv_fd.c		\
	lib/compat/localtime_r.c	\
	lib/compat/memrchr.c		\
	lib/compat/mmap.c		\
	lib/compat/nanosleep.c		\
	lib/compat/pio.c		\
	lib/compat/strcasestr.c		\
	lib/compat/strptime.c		\
	lib/compat/strtok_r.c

include lib/compat/tests/Makefile.am
